kang/container/dnp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: sane-dnp-ingress
spec:
  rules:
  - host: k8s.sane.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ServiceName
            port:
              number: 80
